--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00067.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00067.md
@@ -2,16 +2,15 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/a0XPiEEwdYooiA5-2XO1_tQqvUTUlzsF2w3jC0PKZ1B52IOTkKG68iXTxF3H4ljwX2Lg7OJllKo4YST--N5ozJX3d5s782n84akXxMhZnSH0tWUYHmCd_RZobqkWf-Es0tyhw4jfM5mppRj93MSo6ybNcFLTroja8GUhj0e0fbZNZC6w24A65XnxeAnGWOgPY9KvPETLANJgVZPEEyrFE-rCLEfR-YPbFzUq7AYwIC9LKxvEyFWZjUNLNYUts5FJczqVs8ZnMxW_eUo8R8j5Vhiv_Hoc-SXle3a4cO7Dwp-U0lqCUvhPtWj9DVg4H5OAQV7lZmYT7-aZ9gzfeMxLAEGup5emMojXjtT2rUhawNPt25vEHOkDFFq74Ko3sfPNPrlri0ykxoQQ87Keta30Cu87c6jyz6JMNiHewIEnA4XOk3KWR4-o_jWWXtSsjnyYI_8juORsYBVefDhilg5KrdMurYGyosd9gheuG01tAdk8uBrbtoNQq272_qd8eKwZnEafXwzKaaOvsFnr2a3z-XyfEHUKHLLaCm0XlUF78eM=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABd1zUnt2ro4DC6_J26EjRBa/luontokuvat/syksy/DSC52054-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/iEP__DbKlXMgjdkx-rc7YNm_njc4kNA3hM3mjd4mEmlzHESahniOcSapNxnEQAB9dDfwb1eYnEwXJHD0aiC88zNsxdV4fcqQ1e0Qt77f_URqKMsrGapvdHAzn5mY-FluOjnxsOLae5viB-5CRBbsSMtkXGYJ0o-lNf49RdPORQCeIVxfMmW8gNYsdlm4fLWuoLQEstbmwXGfugOM7uGF5fUgHkvtoMkpN7qcsCpnCtlpGEC-lSJFGLrGyZf8HSQ_tBgKQ_-KhWo9oR4QnTkoTeAZU-ZAjgU_U8k2CMabtyRAGB5BC6KSEIpJyEd7wwQ3dFNMQUjh0u6NXmZeRVleBGhlCPi_1tfgN7yhr3eDAcKc4-7dvwEit9n9Op41T_CwrhAwFZyeBQQYSNJbW-YW1Ku05ofZWHaQRWt0G_MYyTKkcTITxy8Fems_2zuOsYA3bmBcpYII7mbHHmtc45F7PJOKH-zn78Uj0_nFtc_V7irohKVCHTSQUgVO6kM2DDRqSVuys40p73qw6OPoi865T4_4jtmxf3DeU3gld9sK-Lc=w800)](https://lh3.googleusercontent.com/iEP__DbKlXMgjdkx-rc7YNm_njc4kNA3hM3mjd4mEmlzHESahniOcSapNxnEQAB9dDfwb1eYnEwXJHD0aiC88zNsxdV4fcqQ1e0Qt77f_URqKMsrGapvdHAzn5mY-FluOjnxsOLae5viB-5CRBbsSMtkXGYJ0o-lNf49RdPORQCeIVxfMmW8gNYsdlm4fLWuoLQEstbmwXGfugOM7uGF5fUgHkvtoMkpN7qcsCpnCtlpGEC-lSJFGLrGyZf8HSQ_tBgKQ_-KhWo9oR4QnTkoTeAZU-ZAjgU_U8k2CMabtyRAGB5BC6KSEIpJyEd7wwQ3dFNMQUjh0u6NXmZeRVleBGhlCPi_1tfgN7yhr3eDAcKc4-7dvwEit9n9Op41T_CwrhAwFZyeBQQYSNJbW-YW1Ku05ofZWHaQRWt0G_MYyTKkcTITxy8Fems_2zuOsYA3bmBcpYII7mbHHmtc45F7PJOKH-zn78Uj0_nFtc_V7irohKVCHTSQUgVO6kM2DDRqSVuys40p73qw6OPoi865T4_4jtmxf3DeU3gld9sK-Lc=s0)
 
-[![](https://lh3.googleusercontent.com/4V6x6Fm76tS8YMUzz6NIQKSw9uXxlm_ZshXg5Cxze1ulsY5U7NZPV3miQaQTxJFz8z7mnp6tKeXfLii1BpAznoeod5AvGFVRdSfGQ_CeHMnySjcbrZl18kaXeTBxBmNN8lwf83jyHnM2bxWZulyxcAYvOFlif1lqnthmTf8L7eb8J1x9fOMnUh6NlX2h5VOc__uHY_a7FU1K4LPItbaec4rHaLrFuST8ZEo45QOUXZYG8Lo6GRp1o-t8V2zqgVHlbUdEB6MBmzqikbPKjqTeLZcw6QS2ZRO9uDQfQ3SfHUpQIE-tnT9x76cuAWQKIqzbVfMR20TiB5KVyM1KKRzKk141Ky6Ynz54-Lv5Ro45NeqFdMzFAcvO8DIU1Gf0JvpcMqlI3bWz93Oy6FCo5X6jyXxXfcpaxEzZyo6gA0H6upteq6c-Zm5-kCKNIQKykCEigwjXvur8AjH5nZXbsg8VHwZqMgiXNzTUg5kH8pcPL7je1p_gGqgYWoKiehJjcQN7xjfAaYz6Be3Yi8PP320eylBfO3Qwh9Nh0UU-XDPxdVk=w800)](https://lh3.googleusercontent.com/4V6x6Fm76tS8YMUzz6NIQKSw9uXxlm_ZshXg5Cxze1ulsY5U7NZPV3miQaQTxJFz8z7mnp6tKeXfLii1BpAznoeod5AvGFVRdSfGQ_CeHMnySjcbrZl18kaXeTBxBmNN8lwf83jyHnM2bxWZulyxcAYvOFlif1lqnthmTf8L7eb8J1x9fOMnUh6NlX2h5VOc__uHY_a7FU1K4LPItbaec4rHaLrFuST8ZEo45QOUXZYG8Lo6GRp1o-t8V2zqgVHlbUdEB6MBmzqikbPKjqTeLZcw6QS2ZRO9uDQfQ3SfHUpQIE-tnT9x76cuAWQKIqzbVfMR20TiB5KVyM1KKRzKk141Ky6Ynz54-Lv5Ro45NeqFdMzFAcvO8DIU1Gf0JvpcMqlI3bWz93Oy6FCo5X6jyXxXfcpaxEzZyo6gA0H6upteq6c-Zm5-kCKNIQKykCEigwjXvur8AjH5nZXbsg8VHwZqMgiXNzTUg5kH8pcPL7je1p_gGqgYWoKiehJjcQN7xjfAaYz6Be3Yi8PP320eylBfO3Qwh9Nh0UU-XDPxdVk=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADWIwe6Ed1fPiWuzt5WD_C4a/luontokuvat/syksy/DSC52085-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACxAiXeCfxYeB7QY3hX0BePa/luontokuvat/syksy/DSC52085.jpg)
 
-[![](https://lh3.googleusercontent.com/sc-OB_Q1xrOQjO55AKbENU7cspcheiW8ccp8l_XObtP1xKSSMIMWljJls3WgNc03O8WMKsDF3Xxb4lET99peIWQgWI7W73vceKAxSVlhaX6GvGg3fEzNSTRQRdCxCr2J-mTLMSG7EOcT4u4bn7F5YFqFklvkEr6gybL0mFs4a6oTUFdWt-cnh1y4oCjIs6WU7cHMouF0CWatWAFIENQxXgrYSgoXQFAK-pcm0xriqgNQVB2qO8pFeh0xRRuc08CkskuPUdOGKUvPNc-MFmH2gQYvtqW30PoME7fqWi9SLKYIj_GCMbFTbveC1_ha1gyENLubgkvxlB9GFlzRA5ijLjREeWj3LfCyx9awmC9InRvWPyQBia10dTPjQ-p77ivMzYxzdZiJANGNDTugAPhM4PH5GHohBwOaiBHsRN1apuseOvJKLc7zxtQtHe44hZNmEOvusOVvzEHwoX6EKRJHLW3QcoBozO4ruC4t2mP9TVGtumfUsIVPrmDiqPdkzcWMSh0T585yTfiH3ZzX3MgVZejgzWyO2HsjxpJMYeMQr0E=w800)](https://lh3.googleusercontent.com/sc-OB_Q1xrOQjO55AKbENU7cspcheiW8ccp8l_XObtP1xKSSMIMWljJls3WgNc03O8WMKsDF3Xxb4lET99peIWQgWI7W73vceKAxSVlhaX6GvGg3fEzNSTRQRdCxCr2J-mTLMSG7EOcT4u4bn7F5YFqFklvkEr6gybL0mFs4a6oTUFdWt-cnh1y4oCjIs6WU7cHMouF0CWatWAFIENQxXgrYSgoXQFAK-pcm0xriqgNQVB2qO8pFeh0xRRuc08CkskuPUdOGKUvPNc-MFmH2gQYvtqW30PoME7fqWi9SLKYIj_GCMbFTbveC1_ha1gyENLubgkvxlB9GFlzRA5ijLjREeWj3LfCyx9awmC9InRvWPyQBia10dTPjQ-p77ivMzYxzdZiJANGNDTugAPhM4PH5GHohBwOaiBHsRN1apuseOvJKLc7zxtQtHe44hZNmEOvusOVvzEHwoX6EKRJHLW3QcoBozO4ruC4t2mP9TVGtumfUsIVPrmDiqPdkzcWMSh0T585yTfiH3ZzX3MgVZejgzWyO2HsjxpJMYeMQr0E=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAl3ppt0dACexdT8i2Vy9pea/luontokuvat/syksy/DSC52046-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACYjhXyEo0fxoAIglDq-k4ga/luontokuvat/syksy/DSC52046.jpg)
 
-[![](https://lh3.googleusercontent.com/-lYmCt5PVkxgvUbMylsOGDIGYIL9jVoH00TG97-jWMnLJLg2OXP-EuWIMG8sve6DSmRDNx9we5kRv4jaeaBys9PBVYlnHNGyVuJn_MuF_sZTW6SMnECt2vCIifxlg9r6WQLlj02qXX_07K5ZxKICBIsnVpXH3plFQXt5Fuc0hQSJ4ddDurhjqZJPpWl8YOI6kdbg0chwSgRV2_yPCALvAvIaPZLnPnqBN9709LcF3UU6N8xH8ge28iH_fx0vDGfG79tbnFDZ9IlqxIUnCZrTBe-0gzDXozpuSCISJciH172e9ygO1Z-EN230xjh3f_Atp3AKS75YuX2UzpS-CPw6qo6J8PR_JLP4_fScMOaTpSrgvbYQKxlPXElRPyiFQzp2UNT6D_QrLXVG89_9XW0EheCMTiNttWLBzyrUX5b8H7PqRqT8udMFD2smWly62kXUEjJWfacdoM7TbxAgh4y2Tq38TV7rsRmo40-VNVPZTpu_O1P0XTNp2cUwFuWnYOqClSRBHLpHROxYBLzeKWVS1QWsv20BqO194PmDYpg2O7I=w800)](https://lh3.googleusercontent.com/-lYmCt5PVkxgvUbMylsOGDIGYIL9jVoH00TG97-jWMnLJLg2OXP-EuWIMG8sve6DSmRDNx9we5kRv4jaeaBys9PBVYlnHNGyVuJn_MuF_sZTW6SMnECt2vCIifxlg9r6WQLlj02qXX_07K5ZxKICBIsnVpXH3plFQXt5Fuc0hQSJ4ddDurhjqZJPpWl8YOI6kdbg0chwSgRV2_yPCALvAvIaPZLnPnqBN9709LcF3UU6N8xH8ge28iH_fx0vDGfG79tbnFDZ9IlqxIUnCZrTBe-0gzDXozpuSCISJciH172e9ygO1Z-EN230xjh3f_Atp3AKS75YuX2UzpS-CPw6qo6J8PR_JLP4_fScMOaTpSrgvbYQKxlPXElRPyiFQzp2UNT6D_QrLXVG89_9XW0EheCMTiNttWLBzyrUX5b8H7PqRqT8udMFD2smWly62kXUEjJWfacdoM7TbxAgh4y2Tq38TV7rsRmo40-VNVPZTpu_O1P0XTNp2cUwFuWnYOqClSRBHLpHROxYBLzeKWVS1QWsv20BqO194PmDYpg2O7I=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC2DnfXoWTpVg0fq6TSci3-a/luontokuvat/syksy/DSC52054-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACirujUGDqkbVtxi1tniFNCa/luontokuvat/syksy/DSC52054.jpg)
 
-[![](https://lh3.googleusercontent.com/YmMMitmxEsiqNgFDWFEZK-W5jjuHvqA_HAzzCmkf0IeVHrBavhSWkWt3YAFjeQh4FJR582bwupgus-DopIsQrfs0bkX9ENKCKirvztf5Vx3EVB4J3CXSKOMfqE4FXtkQIxxIRQaGKzTNFvQxA9MfUL3bHIqVb58UPr85a0qCiiAamTcVZ-6H-btOZWpp-_4Vw0R1OJwLUOdviHQNdYgZViKpG3ABHqMS7l5I5hkM8G7urMhTnxOAN6Nus83huqTvhTK-FRSxa0xmgKobg3-8lhcwoIdbf_gJO1M1s2h3NM0oCJF9c48X_9viIMDXTX3b-4hLA4UTPy5G81uSKtjGWCyw_1VjWw-TMjiTBH9chVXkfQsxK9-ebigjSHSC5wWXMQcdfckpeSYT-O2ikvKIJu0xQcpAvrGrVUVNp0ixHcwkpTZCKgTAFlcIJZ5OB8ej6kIIrQd2F6xdrVgp_MO91GCt9O2k_43yWXmZ63NacdzdiwqsWja4shEwE1pAudvAz5pkRqJZ4jezAkUz6tOQdZ9jz4lzvNJaJk4ba_1E9FU=w800)](https://lh3.googleusercontent.com/YmMMitmxEsiqNgFDWFEZK-W5jjuHvqA_HAzzCmkf0IeVHrBavhSWkWt3YAFjeQh4FJR582bwupgus-DopIsQrfs0bkX9ENKCKirvztf5Vx3EVB4J3CXSKOMfqE4FXtkQIxxIRQaGKzTNFvQxA9MfUL3bHIqVb58UPr85a0qCiiAamTcVZ-6H-btOZWpp-_4Vw0R1OJwLUOdviHQNdYgZViKpG3ABHqMS7l5I5hkM8G7urMhTnxOAN6Nus83huqTvhTK-FRSxa0xmgKobg3-8lhcwoIdbf_gJO1M1s2h3NM0oCJF9c48X_9viIMDXTX3b-4hLA4UTPy5G81uSKtjGWCyw_1VjWw-TMjiTBH9chVXkfQsxK9-ebigjSHSC5wWXMQcdfckpeSYT-O2ikvKIJu0xQcpAvrGrVUVNp0ixHcwkpTZCKgTAFlcIJZ5OB8ej6kIIrQd2F6xdrVgp_MO91GCt9O2k_43yWXmZ63NacdzdiwqsWja4shEwE1pAudvAz5pkRqJZ4jezAkUz6tOQdZ9jz4lzvNJaJk4ba_1E9FU=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACLe5IoBXHv3AzlSitG1APEa/luontokuvat/syksy/DSC52048-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADFqVkXVQQTOAyjOT-LDLz1a/luontokuvat/syksy/DSC52048.jpg)
