--- a/luontokuvat/syksy/_posts/2015-07-14-00068.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00068.md
@@ -2,12 +2,12 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/SrbnXSHOg43OVvmciAcxQg93oY5rQpMsqZK3ml9voJ1W0JoKxkxZto33B6cFzi7Z-q9PJ4xy5mL1fwTOeu3Xnv9mJgjeNVk3RT5aIJefLR9Ffr2W4As1AksuSFTENLq2D7HFh4TAn1jLLcwsU1TS2a12i6OVCP2Fv4hcmi603tAGYpUnigMIzF7DBx6mAcXuvZNyIlODEi_JvDny6qKGe_--C5g3-g4Yjcp02w2WlqvnEausQXfQDxsjk9F0QNa5nBewogQOuMFNSi0Ps6hI29MGXaSUACh66tJpKrRKMITZmq3JAse_UPuFrL2YSLkz2n0VTk4DO62rdKSgXLRTzOBtUKRS7rAcBZCjaSlqPQ89CBE5qlxggurip9g_CbSKsw2b_3xvoa7tpoiNfoNNK5jfZTChe5HrGkptekSp8bCYrv5VrUcCZLYHBvLWnjVLGZYM_5oPhPwSFS_ddxbNs_JkZrFxb4iwiZmN5xEF4s6lel9283xx_A5xwkc0qlzpIQsYJIdqYPvC3PY6gN_6W7JLMYq37ox-VZhq6RbYDF4=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADx5y2Za9asdXY99SSSw8lTa/luontokuvat/syksy/DSC52171-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/Kpzhit4VpD_mPkA4xuICUBdbrpKgTYlMrm-HR2Dx6SaLI-62Q3g7pgIbt08285KPr5RH0TB4Zc1UUXgR0hKw-OIdJ90FBal1JKdOWgT0BVtxZs7zCL8LTywCirx7_jZWfgrZ97ELAZgGvv0liC0RTRsiVNWkvVwhUsXOU2P74rk6ZNn_dNS_zJpLUc1m54Y0VWVh-lvo3DplNgfR8aM40oB6i3FGXtXR1n_gTZukRlHY496E1O2l0MnAlIG7IcgbajC4EB7BZqaFoly-GhRf7rvMs2nC81UMy-enpb8jrEo970FWzH8ytdf6CywWfcHiuByNMmFp7FadVvkbCmFgBp8-WI4C2_RwvejoqDnjUWuaQthvtwZ0EPVrGv9-sp5ywwoPyhVzSIzWmWuKOBf6A1Rsw1IiggEsEW_nv3ibVm7TddBWTiMMGWVIiIzVIdawxNDrarNy1ZnapsC2iOm5HaIkZQMolBMV2_f90lCnNYEtcc1vz7ArsLVzPbnjRsSRBPm66L7H3PmvLOiLjA6qDQw7p5ChSkbtJoOjJr-FtcA=w800)](https://lh3.googleusercontent.com/Kpzhit4VpD_mPkA4xuICUBdbrpKgTYlMrm-HR2Dx6SaLI-62Q3g7pgIbt08285KPr5RH0TB4Zc1UUXgR0hKw-OIdJ90FBal1JKdOWgT0BVtxZs7zCL8LTywCirx7_jZWfgrZ97ELAZgGvv0liC0RTRsiVNWkvVwhUsXOU2P74rk6ZNn_dNS_zJpLUc1m54Y0VWVh-lvo3DplNgfR8aM40oB6i3FGXtXR1n_gTZukRlHY496E1O2l0MnAlIG7IcgbajC4EB7BZqaFoly-GhRf7rvMs2nC81UMy-enpb8jrEo970FWzH8ytdf6CywWfcHiuByNMmFp7FadVvkbCmFgBp8-WI4C2_RwvejoqDnjUWuaQthvtwZ0EPVrGv9-sp5ywwoPyhVzSIzWmWuKOBf6A1Rsw1IiggEsEW_nv3ibVm7TddBWTiMMGWVIiIzVIdawxNDrarNy1ZnapsC2iOm5HaIkZQMolBMV2_f90lCnNYEtcc1vz7ArsLVzPbnjRsSRBPm66L7H3PmvLOiLjA6qDQw7p5ChSkbtJoOjJr-FtcA=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrYw58LmmL0yQuLDV3ghEFa/luontokuvat/syksy/DSC52164-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB_fhVVdgamJEihWETHEYwya/luontokuvat/syksy/DSC52164.jpg)
 
-[![](https://lh3.googleusercontent.com/0Vg7y3d7FQloQuyz0pskRsXV0TDNNgT9OLuXyWKPoZgc30a3KVCceJTmiPz3ZkYLJfcRpFT5Y01nEvOpDJz9NQIyydZ8cbT6PnL35xQqLyGpj36hvxb65tK0nnSjibVE2EHE4yLtckO9OCG32_wCav-E4-Ka9RKKNFDz4kWi9r8u1asVJMitAkUeApLKKVTXKyG3JWVLZhp8gYRD6NcSGJVmdtCSLCaPNyVTEBHR2kf7zzYBybYC9Gk73LqPtDM5rlMTtiFHIxV9xmmwNPS7IOQ6MnvgUNpeQOvD8-p_FgKaXqHYFAASjv86tZ98l8beX0fk-Ef8sk-_ey1SQNM9BYpBgNyczIMzzvIYhtBuMdBPHURzHlgYP__wFH_S9th5UyH0MLD2a3zgY1Yve9dVDXuRix_qf1BAr2fRt-VR-gX3YN_qeZDjfVsLgt4yD4psrZvW2yLbb9eoqk_Azqx1DyD4WDUm-HIYDJlVd0TASqlRQhMhLfMOBTWNwYCw65EqbPBhVIY9cEtguwPxWisJrRCth2I5GsaPYucxlzEvTkg=w800)](https://lh3.googleusercontent.com/0Vg7y3d7FQloQuyz0pskRsXV0TDNNgT9OLuXyWKPoZgc30a3KVCceJTmiPz3ZkYLJfcRpFT5Y01nEvOpDJz9NQIyydZ8cbT6PnL35xQqLyGpj36hvxb65tK0nnSjibVE2EHE4yLtckO9OCG32_wCav-E4-Ka9RKKNFDz4kWi9r8u1asVJMitAkUeApLKKVTXKyG3JWVLZhp8gYRD6NcSGJVmdtCSLCaPNyVTEBHR2kf7zzYBybYC9Gk73LqPtDM5rlMTtiFHIxV9xmmwNPS7IOQ6MnvgUNpeQOvD8-p_FgKaXqHYFAASjv86tZ98l8beX0fk-Ef8sk-_ey1SQNM9BYpBgNyczIMzzvIYhtBuMdBPHURzHlgYP__wFH_S9th5UyH0MLD2a3zgY1Yve9dVDXuRix_qf1BAr2fRt-VR-gX3YN_qeZDjfVsLgt4yD4psrZvW2yLbb9eoqk_Azqx1DyD4WDUm-HIYDJlVd0TASqlRQhMhLfMOBTWNwYCw65EqbPBhVIY9cEtguwPxWisJrRCth2I5GsaPYucxlzEvTkg=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABcZ_uD3OBvdN0E9O-qAc2Ba/luontokuvat/syksy/DSC52171-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABq_oWT4RD9SsK9FFH3XmhCa/luontokuvat/syksy/DSC52171.jpg)
 
-[![](https://lh3.googleusercontent.com/vis71Bo8L4wPq8nynE95qMO95thTcgRZQvIdpAZ646uTpH1L3fq-q0h_-fhPGG5K25supMTXW7LMt8FEcXWYyL0d4g_CuR1Ffy8-V2z7hSicmU-2NX1ZB9T_8DkrYMmgzLeqrvm6ww7k8TTfGqMuSxtwaBkqEAZAkfFZbOH1OTD9YkcFScE3gz-0vOB9ieIKlmLaWytUYBl9rPJAbemNZTkzX-7dX5-1RZoob97RFPICUyjdSv56lpT7puU9Tx1qRWEcDqgP-Hgc2T3Dt0XFoeEcowkYE1foLiQc0D7J2DKhZnku4bXbtVDiaPIKZUo7wRYB744cbpXSyDKbrV4Ndgxfl7qfEoYb7t68DhdPeIazf5wklFMSWVEjropkUI3TqRuho9GT5058SqTiLgRDhILD8KKGdodUouzcN2qoexNMCxGFqu0iDl_EPrTNhdmva0e-fHAt_XVkWVMVacdtO06m7ifkjhac9tXu7BVFfD3iSLYmTtmalcaLWHnShQAgREg2iW268aWzWsQbZ34PYj2WXz_xLJ65X0IReVz0b_Q=w800)](https://lh3.googleusercontent.com/vis71Bo8L4wPq8nynE95qMO95thTcgRZQvIdpAZ646uTpH1L3fq-q0h_-fhPGG5K25supMTXW7LMt8FEcXWYyL0d4g_CuR1Ffy8-V2z7hSicmU-2NX1ZB9T_8DkrYMmgzLeqrvm6ww7k8TTfGqMuSxtwaBkqEAZAkfFZbOH1OTD9YkcFScE3gz-0vOB9ieIKlmLaWytUYBl9rPJAbemNZTkzX-7dX5-1RZoob97RFPICUyjdSv56lpT7puU9Tx1qRWEcDqgP-Hgc2T3Dt0XFoeEcowkYE1foLiQc0D7J2DKhZnku4bXbtVDiaPIKZUo7wRYB744cbpXSyDKbrV4Ndgxfl7qfEoYb7t68DhdPeIazf5wklFMSWVEjropkUI3TqRuho9GT5058SqTiLgRDhILD8KKGdodUouzcN2qoexNMCxGFqu0iDl_EPrTNhdmva0e-fHAt_XVkWVMVacdtO06m7ifkjhac9tXu7BVFfD3iSLYmTtmalcaLWHnShQAgREg2iW268aWzWsQbZ34PYj2WXz_xLJ65X0IReVz0b_Q=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADNNrHFwNnYZXz_n8a8ioDVa/luontokuvat/syksy/DSC52174-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACiE0Sc33VmHfD67ONRSeSRa/luontokuvat/syksy/DSC52174.jpg)
