--- a/luontokuvat/talvi/_posts/2015-07-14-00021.md
+++ b/luontokuvat/talvi/_posts/2015-07-14-00021.md
@@ -2,14 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/ifxYs4uXhVtrw-D5oUxkzdN6czi77FAW2w83ljZ4H6uKqMQuL2rpXK3DKfhPhV7A3OEJ-Ardo4BJ-BeeliqDBHoDuQvwXLwmNYF3xL2_lIAdZLZB62J0ITvXqcBhY8ThQbHKMyEgRkywPIhHVkf3roczLyrrJ-CxYnJhbU9s5KpZCoLV0jlf9vAYRwCn2x2yvMPt4EJUPKihKyUZZMCIZW7ucCzMXtrGb9RsTLk3Sw4qjg4sE0qmwDevlfdeJs1tniiYU4RiyXe34QnbLU4_HhF0VQATuxYou9Lv-xYB0pEaB_YXeE-a2fiGfGrvhjJ0stGkeFtRsfWKSe6kgSpcDCmOsQlwX_1K9gPkvaulgPxLlRDaf-ajj9rp72HcwJ3Nvx4CpwKI6jv9JY5nsOlrjzIeosYYPrBk-hAeHx9neWcMsvncr-zHBjaIBDj0QCX1UIFDksKzsZ0KWTQTmou4JcZOaARIXatBka0ODC3gdjXaUPr_l8cweVgNvSO-JbCYNGlUQ_MXhMkoYWOuyvl4r6WXTRTLyewHNqtNO65bMigCMaRSdl4fzfmlgpbqED3URCm5=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABg5HQcu6ityLzI7slNDduxa/luontokuvat/talvi/DSC59980-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/9m227Z06JpIl_nPrt2NUS_CCgWFvrgN8_A04bgLN87Gpoy-pSjFAU9hd8XVnX-URzNR9n9C1MPJDk5WYD_NkWHW2Wtboc2cQoyEZxubdRgYQHCKHczvtpKyKrl5IM9BU_Vt1Y9LWuxwn7LJZ6fdFK_iIBl38nFyYHgHu8zl8WYmOMAHMZiRGqoUUi8bPSxdIZaOqXmyQQrwgTaqfZn-pb2OpOq3aizj6Tzikgm5O9gn90yGSbDQILjn8wKbUNRkppH84xQtdLYb19pw0ND-ruC_W-lidJauJqG2oDpUU3nQ-IBQkfwIcASubCTN8MuwlWh7edGaWbj38Pb2K_-yor8t54dav6BKbyjin2RAcONN-sEDtUoa0V4x2OPgwMvCcQuDiYtKC0p5K8pIc6ioEE2q_SyWfPTkRPlilK7IK3rMnCawJcwRObJF77yKcUVf3t7AAtInAHfRWmhLxg6yDDBukx7Bwph_sWdHbfX-vWpv5XX_r4Ac6hUzaxupEPzozLjxk1L50cd_yYZGi-slexBQUgJTymvWa8jm-dNNTg9sHeEBJtgViZpeyZBNAPEgzmioq=w800)](https://lh3.googleusercontent.com/9m227Z06JpIl_nPrt2NUS_CCgWFvrgN8_A04bgLN87Gpoy-pSjFAU9hd8XVnX-URzNR9n9C1MPJDk5WYD_NkWHW2Wtboc2cQoyEZxubdRgYQHCKHczvtpKyKrl5IM9BU_Vt1Y9LWuxwn7LJZ6fdFK_iIBl38nFyYHgHu8zl8WYmOMAHMZiRGqoUUi8bPSxdIZaOqXmyQQrwgTaqfZn-pb2OpOq3aizj6Tzikgm5O9gn90yGSbDQILjn8wKbUNRkppH84xQtdLYb19pw0ND-ruC_W-lidJauJqG2oDpUU3nQ-IBQkfwIcASubCTN8MuwlWh7edGaWbj38Pb2K_-yor8t54dav6BKbyjin2RAcONN-sEDtUoa0V4x2OPgwMvCcQuDiYtKC0p5K8pIc6ioEE2q_SyWfPTkRPlilK7IK3rMnCawJcwRObJF77yKcUVf3t7AAtInAHfRWmhLxg6yDDBukx7Bwph_sWdHbfX-vWpv5XX_r4Ac6hUzaxupEPzozLjxk1L50cd_yYZGi-slexBQUgJTymvWa8jm-dNNTg9sHeEBJtgViZpeyZBNAPEgzmioq=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABKZNjxoHGfwQdvDk7AGQuXa/luontokuvat/talvi/DSC59980-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACdq8m8PFpYSE_9_xxMDpPga/luontokuvat/talvi/DSC59980.jpg)
 
-[![](https://lh3.googleusercontent.com/EKnAbAK8-0oqGHBCVwN3TOYeHVKk7N3EiH4C0Ijqpt3g9rNDbgxfUtm8BxcoNc5Hy6U8ohJ1uf-467K2XWbn7BMEeo8vzD86vIetLgfScSMBx0SpfHLezKDdae7fQVkKKGAYKYe6MEwLznR3xpzHErczfdMEHmlTg0M9evok__JU7pNQ7QE6duRnAhEAlk_sbeG_vpkhtwj8tKmBfARu7ZP_BFDmpZ_hPU2FcyL2f-oGFoOXP9lxiTfI0BBezPnEOwynyH4KbWElW1EElbPG_8CQ0rx1F8PbRyoydEIypH4Rj_AXEr7RI_hL8da7XjcoQCyU_A69Lj8oPRVWqE74XMmDA96GLNjvXy1M9y4NN8TdAhhfsjkvjP2_F0z-UyshBRE6nP-Xet5iUeqPxidKp_mh2pAH6LOyTEMXusEg4Bp3ci1dvLaOVIW_4vW2ceIIW87DtPM_qZeClfvFKGhqcwVL45SRwIPr1Qw_my1T09vnzfDla9umKx29P0yyo7dFtVVFcX_2kwgodzPPURyzd-NboNK0bUZ8QOqgvWFzma1WMLXOaU8VjOjYdIy7eLeM9GXa=w800)](https://lh3.googleusercontent.com/EKnAbAK8-0oqGHBCVwN3TOYeHVKk7N3EiH4C0Ijqpt3g9rNDbgxfUtm8BxcoNc5Hy6U8ohJ1uf-467K2XWbn7BMEeo8vzD86vIetLgfScSMBx0SpfHLezKDdae7fQVkKKGAYKYe6MEwLznR3xpzHErczfdMEHmlTg0M9evok__JU7pNQ7QE6duRnAhEAlk_sbeG_vpkhtwj8tKmBfARu7ZP_BFDmpZ_hPU2FcyL2f-oGFoOXP9lxiTfI0BBezPnEOwynyH4KbWElW1EElbPG_8CQ0rx1F8PbRyoydEIypH4Rj_AXEr7RI_hL8da7XjcoQCyU_A69Lj8oPRVWqE74XMmDA96GLNjvXy1M9y4NN8TdAhhfsjkvjP2_F0z-UyshBRE6nP-Xet5iUeqPxidKp_mh2pAH6LOyTEMXusEg4Bp3ci1dvLaOVIW_4vW2ceIIW87DtPM_qZeClfvFKGhqcwVL45SRwIPr1Qw_my1T09vnzfDla9umKx29P0yyo7dFtVVFcX_2kwgodzPPURyzd-NboNK0bUZ8QOqgvWFzma1WMLXOaU8VjOjYdIy7eLeM9GXa=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAc5Z_rQDLzgywPjsH3V9eHa/luontokuvat/talvi/DSC59984-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA_1rEVm7PmjIqzbFk0FPZBa/luontokuvat/talvi/DSC59984.jpg)
 
-[![](https://lh3.googleusercontent.com/WNQ8xhSY6aOvn9I6HoujYE80KdXzPpu18PfR8y05CdvkrjHfgaErefo3HJNo3NCZEaokJpFKagjYf-ibainNlmtplsg9OkbtSeP5-KxUdGWhgR8fjYREBurN5iAqW5fAgnRrP31n9JRi1XSsN2W27Ux6tbxGVyyf1t_b4xGNgb9-CA01Yx6q7PhCFsHl-x0GNFj8CLpHuhpor3-miEPoEP8_pNEhxFjqDGjwmLAyNBURi2l4K3tFUJhZYxZj4lEwlSTirk9AEoIgLAC1zJ6lLSRToKHlVF0VuIFcoDFJ8AtA0eXiT4ev0mLXlDaCTIZSuwpcr-nbh9FneWHhHN8tsfhx2bQz9O6ZoisFSinlwj0hnrNxrQGAlj9JS1DqLjktEgfDh1XCVkn7gXanQsNUSZF3vgSspJawvGgh4HCvHbC1laLTKNpuqMWToV9kF3jp77AzHRVb4ou4XCdxMuyRIIdRvv0m9OJeprTzC_78xSk3DhG0cTHi_iX_uWCdcCQ9DMkZL5X4S5DRbPZgxA0uQKw69N3q1g2nxAs6rhMcAluismP34sqcKr-xTVqeQLezKl7m=w800)](https://lh3.googleusercontent.com/WNQ8xhSY6aOvn9I6HoujYE80KdXzPpu18PfR8y05CdvkrjHfgaErefo3HJNo3NCZEaokJpFKagjYf-ibainNlmtplsg9OkbtSeP5-KxUdGWhgR8fjYREBurN5iAqW5fAgnRrP31n9JRi1XSsN2W27Ux6tbxGVyyf1t_b4xGNgb9-CA01Yx6q7PhCFsHl-x0GNFj8CLpHuhpor3-miEPoEP8_pNEhxFjqDGjwmLAyNBURi2l4K3tFUJhZYxZj4lEwlSTirk9AEoIgLAC1zJ6lLSRToKHlVF0VuIFcoDFJ8AtA0eXiT4ev0mLXlDaCTIZSuwpcr-nbh9FneWHhHN8tsfhx2bQz9O6ZoisFSinlwj0hnrNxrQGAlj9JS1DqLjktEgfDh1XCVkn7gXanQsNUSZF3vgSspJawvGgh4HCvHbC1laLTKNpuqMWToV9kF3jp77AzHRVb4ou4XCdxMuyRIIdRvv0m9OJeprTzC_78xSk3DhG0cTHi_iX_uWCdcCQ9DMkZL5X4S5DRbPZgxA0uQKw69N3q1g2nxAs6rhMcAluismP34sqcKr-xTVqeQLezKl7m=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADOEXVhP-NASRV1VKunzchDa/luontokuvat/talvi/DSC59987-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_We-YqqWwrguDlkGzBYpva/luontokuvat/talvi/DSC59987.jpg)
 
-[![](https://lh3.googleusercontent.com/_i9NuCk-UyZ8I18e3c_sWgofmwZA_3ApwTpS7l4ugCxNtQT12508EHp8xJkeyMJCD8vuEh6sSOX4wL5v7_1D4ejXl_nZEGOfOlFmP9cyjpcv3PsCZ04p9V0up269ealMfCjePUFWvikoplRP4UIod-x_zRWP2murGj0W6kHjufqVruftkn_8Um7YohUbo2XWovlTXb551tMiI2nJZ69KImnUqGx_mU4X8vmDH15J0wR-sYvhLMGUovLSf4ZWUMdxV_74V_9cHqGKjadseHyUOQqJdwrsUMf3Zmua_sl0Ei7JnOlu7dmKU0-GYNX6zzQdK8ygP0QsGoaPBt74FDund0SqqNtXddyi12YP8r5AsQDlJyhtVA9enYqIrXKI45x5clFsT2DbLg0n6N7l4fVe4lpyvwtJCtnR1dQeYCO2qUaxYaMQEAj2UKbKrlvh7nrAGU7j_Q6ObZGYO1iYdBY7AJcHx15mhPicS1vjPcJKFN7OKbyL0QFpgTI20HqCiNs64YfqAopu4-e40cLaI0ADNFFC8hPALZDcG6EvzLI9j4iUsVgNPJs6xxS3Zo2f4r_Ez9te=w800)](https://lh3.googleusercontent.com/_i9NuCk-UyZ8I18e3c_sWgofmwZA_3ApwTpS7l4ugCxNtQT12508EHp8xJkeyMJCD8vuEh6sSOX4wL5v7_1D4ejXl_nZEGOfOlFmP9cyjpcv3PsCZ04p9V0up269ealMfCjePUFWvikoplRP4UIod-x_zRWP2murGj0W6kHjufqVruftkn_8Um7YohUbo2XWovlTXb551tMiI2nJZ69KImnUqGx_mU4X8vmDH15J0wR-sYvhLMGUovLSf4ZWUMdxV_74V_9cHqGKjadseHyUOQqJdwrsUMf3Zmua_sl0Ei7JnOlu7dmKU0-GYNX6zzQdK8ygP0QsGoaPBt74FDund0SqqNtXddyi12YP8r5AsQDlJyhtVA9enYqIrXKI45x5clFsT2DbLg0n6N7l4fVe4lpyvwtJCtnR1dQeYCO2qUaxYaMQEAj2UKbKrlvh7nrAGU7j_Q6ObZGYO1iYdBY7AJcHx15mhPicS1vjPcJKFN7OKbyL0QFpgTI20HqCiNs64YfqAopu4-e40cLaI0ADNFFC8hPALZDcG6EvzLI9j4iUsVgNPJs6xxS3Zo2f4r_Ez9te=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAwqCTBeCfdnjHUhSrfcbMwa/luontokuvat/talvi/DSC59988-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAowHJBLxXuUxyD_Cn-Yoeka/luontokuvat/talvi/DSC59988.jpg)
