--- a/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00023.md
+++ b/en/pictures-of-finnish-nature/winter/_posts/2015-07-14-00023.md
@@ -2,7 +2,7 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/vXypVikYmPGQ-a5ybaSFEsqwMx9z0d9P_0RT1j3CUq-PHr3sjtAIwjUsxgDt5phLbcizhYkru2XBsi-FpvwyRNQScz2M6nQSUyEqeOuK7UB8jT_cZRBZNUi78gi_ycFJOlFK-BZY1ja7zM4VN2yz8CM28az-shwl1v6nyDv6ng0MBKDnRS7r9MLdiMjzbBZms68Z-hd3FyoKVTKQ1h64Cfy43v1Th0nq4mekuU5T2GHdzWMMiZ17lCFlgxA61usSbLp2AUUP2LEzvuw8y1DgtIHic_wlVeoxIChuY_czdMQ1FgNAmxk5EbeALPXhwjPvAme1wFc3USKN7HxZK69yPxAqCRLfQAwNAoQhsAp8AEYRUK0f3doT8YaoLH-TuI_FNwxDjupLKjuRfGPWHJwSSyt5uIGzSvPbclQq1Zbj5MXqrZ9mUs4IW2O8HPTx2QZow8mVUeKaWdBaGiMDNQ2v2Ph4582dMOEzsefTWKz1JfeXVGL-g-M_VH8ADHdQV8bfyEXuXuVpEALSfXfwuP_MsGZwAKmABLBwVuMc9QS9fl-bU5v6t6EtivRxq6swMuvc92vk=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA_1c4788t_VQKU7kyvk5p-a/luontokuvat/talvi/DSC60723-245px.jpg
   thumb:
 ---
 
