--- a/luontokuvat/syksy/_posts/2015-07-14-00064.md
+++ b/luontokuvat/syksy/_posts/2015-07-14-00064.md
@@ -23,3 +23,7 @@ image:
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADPDMAYkhgayg_I452jS_KAa/luontokuvat/syksy/DSC52003-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADtImdSx4NwrxmsV48q_KAYa/luontokuvat/syksy/DSC52003.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACna42eusKOdlXeELh_dTBca/luontokuvat/syksy/DSC51994-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABpR7RyLmncrEPicpUDwgAma/luontokuvat/syksy/DSC51994.jpg)
+
+Maapallo 200 miljoonaa vuotta sitten :)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAMGqIY_NYvs8XN7W1pyCAra/luontokuvat/syksy/DS07678-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAARIhpRhMiPspWXVPNNs5j2a/luontokuvat/syksy/DS07678.jpg)
