--- a/aktivointi/_posts/2015-07-11-lasagne.md
+++ b/aktivointi/_posts/2015-07-11-lasagne.md
@@ -1,5 +1,5 @@
 ---
-title: "Cardboard box lasagna"
+title: "Lasagne"
 layout: article
 image:
   feature:
@@ -7,11 +7,11 @@ image:
   thumb:
 ---
 
-You need a good size cardboard box, a magazine (staples taken out) and some dry treats or kibbles. Separate the pages from the magazine and lay them in the box on top of each other and put the treats in between.
+Tarvitset isohkon pahvilaatikon, aikakauslehden (josta niitit on poistettu) sekä kuivia nameja, esim. nappuloita sekä jotain kuivia herkkuja. Pahvilaatikkoon laitetaan kerroksittain aikakauslehden sivuja ja nameja sinne väleihin. Laitan yleensä herkkupalat alempiin kerroksiin ja nappulat päällimmäisiin kerroksiin.
 
-Usually it takes Miki about 10 to 15 minutes to find all the treats.
+Mikiltä menee noin 10-15 minuuttia kaikkien namien löytämiseen.
 
-As you can see in last the picture, Miki once took a shortcut and knocked the box over and ate the kibbles from the floor.
+Viimeisessä kuvassa näkyy kun Miki kerran vähän oikaisi, eli Miki kippasi laatikon nurin ja poimi nappulat lattialta hetkessä.
 
 ---
 
