--- a/en/activation/_posts/2015-07-20-lasagna.md
+++ b/en/activation/_posts/2015-07-20-lasagna.md
@@ -1,5 +1,5 @@
 ---
-title: "Pahvilaatikkolasagne"
+title: "Lasagna"
 layout: article
 image:
   feature:
@@ -7,11 +7,11 @@ image:
   thumb:
 ---
 
-Tarvitset isohkon pahvilaatikon, aikakauslehden (josta niitit on poistettu) sekä kuivia nameja, esim. nappuloita sekä jotain kuivia herkkuja. Pahvilaatikkoon laitetaan kerroksittain aikakauslehden sivuja ja nameja sinne väleihin. Laitan yleensä herkkupalat alempiin kerroksiin ja nappulat päällimmäisiin kerroksiin.
+You need a good size cardboard box, a magazine (staples taken out) and some dry treats or kibbles. Separate the pages from the magazine and lay them in the box on top of each other and put the treats in between.
 
-Mikiltä menee noin 10-15 minuuttia kaikkien namien löytämiseen.
+Usually it takes Miki about 10 to 15 minutes to find all the treats.
 
-Viimeisessä kuvassa näkyy kun Miki kerran vähän oikaisi, eli Miki kippasi laatikon nurin ja poimi nappulat lattialta hetkessä.
+As you can see in last the picture, Miki once took a shortcut and knocked the box over and ate the kibbles from the floor.
 
 ---
 
