--- a/aktivointi/_posts/2015-07-11-onginta.md
+++ b/aktivointi/_posts/2015-07-11-onginta.md
@@ -15,9 +15,9 @@ Aloitin pesemällä ja kuivaamalla purkin huolellisesti. Sitten kiinnitin kertak
 
 Aloitimme helpolla tehtävällä, joka muistutti [Muki tuubissa](http://minimuutti.com/aktivointi/muki-tuubissa/) tehtävää. Ensin käänsin purkin kyljelleen lattialle, laitoin kuppiin muutaman ankkafileestä leikatun palasen ja sitten työnsin kupin purkin sisälle. Tehtävässä kannattaa käyttää jotain tahmeita nameja, jotta ne pysyvät mukin sisällä eivätkä putoa tuon purkin sisälle kesken tehtävän.
 
-Miki tiesi heti että palikasta tulee vetää saadakseen mukin ulos. Toistin vielä kertaalleen tämän helpon tehtävän, jotta Mikillä kunnolla muistui mieleen että palikasta tulee vetää taaksepäin saadakseen kupin herkkuineen ulos.
+Miki tiesi heti että palikasta tulee vetää saadakseen mukin ulos. Toistin vielä kertaalleen tämän helpon tehtävän, jotta Mikillä kunnolla muistui mieleen, että palikasta tulee vetää taaksepäin saadakseen kupin herkkuineen ulos.
 
-Sitten aloitimme tämän itse onkimisen. Kokosin tehtävän muuten ihan samalla tavalla, mutta tällä kertaa käänsin purkin pystyyn. Tavalliseen tapaansa Miki yritti aluksi kipata purkin nurin saadakseen namin, mutta pidimme purkista kiinni jotta se pysyi pystyssä.
+Sitten aloitimme tämän itse onkimisen. Kokosin tehtävän muuten ihan samalla tavalla, mutta tällä kertaa käänsin purkin pystyyn. Tavalliseen tapaansa Miki yritti aluksi kipata purkin nurin saadakseen namin, mutta pidimme purkista kiinni, jotta se pysyi pystyssä.
 
 Muutaman tassulla haromisen jälkeen Miki tajusi vetää palikasta ja sai tuon kupin ulos. Olin erittäin yllättynyt Mikin kyvystä ratkaista tämä tehtävä niin nopeasti, koska tehtävä on kuitenkin aika vaikea.
 
