--- a/en/activation/_posts/2015-07-20-pill-jars.md
+++ b/en/activation/_posts/2015-07-20-pill-jars.md
@@ -13,7 +13,7 @@ You can use any dry treats, I’ve used some kibbles.
 
 These games are so easy for Miki, that he gets the kibbles out from a single jar in just seconds. That’s why I always give several jars at the same time.
 
-If you have large-mouthed jars, you can put pieces of cloth or small balls inside the jars as obstacles to make the game harder.
+If you have large-mouthed jars, you can put corals or pieces of cloth as obstacles to make the game harder.
 
 ---
 
@@ -32,3 +32,7 @@ If you have large-mouthed jars, you can put pieces of cloth or small balls insid
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA5dopE0Ujd7a5C4sVko9O6a/aktivointi/pilleripurkit/DSC58472-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADVMwDTya-NUg4-uK4F1E4Oa/aktivointi/pilleripurkit/DSC58472.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAJOZtk8Nj1mbDrrbeCiqvna/aktivointi/pilleripurkit/DSC58485-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACrXsjVunUTXbyOuVoLCXy2a/aktivointi/pilleripurkit/DSC58485.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACJIS5ojcwG72qcKlZ6hCn-a/aktivointi/pilleripurkit/DSC60994-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADiMzttr5cE9juoY_P2MK_Ma/aktivointi/pilleripurkit/DSC60994.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAQef0Lwv4kmWDU6AXZTSkTa/aktivointi/pilleripurkit/DSC60998-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA8ew5w9bBoW58kM7zXrOgPa/aktivointi/pilleripurkit/DSC60998.jpg)
