--- a/en/activation/_posts/2015-07-20-trivet.md
+++ b/en/activation/_posts/2015-07-20-trivet.md
@@ -14,7 +14,7 @@ I put the trivet on the floor and sprinkled some treats in the gaps. That game w
 
 At the third time I wired about 3 meters (10 feet) long string of fabric to it and secured it with knots. I have cut old t-shirts to make these strings, but you can use any fabric like old sheets and towels or yarn. This time it took Miki 1-2 minutes to eat all the treats.
 
-You can make this game harder by laying the trivet in a cardboard box.
+You can make this game harder by placing the trivet into a cardboard box.
 
 ---
 
