--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00047.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00047.md
@@ -2,12 +2,24 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/1Qfqhu8K5cDT3JfeWj6zKI8m9chfw_40en1dQ8-8i3c=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABQUp2_bLKk5Cl5ngbK5szza/luontokuvat/kes%C3%A4/5/DS23891-245px.jpg
   thumb:
 ---
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAKdREXU1iXdx8rWzsFf5vqa/luontokuvat/kes%C3%A4/5/DS24415-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADmyNok0ne4yDQHYAlh2R9fa/luontokuvat/kes%C3%A4/5/DS24415.jpg)
 
 [![](https://lh3.googleusercontent.com/m4jWHjiLB4MyqDfbTmR9DUD6GtXH6N1xAIUUtl0NEBs=w800)](https://lh3.googleusercontent.com/m4jWHjiLB4MyqDfbTmR9DUD6GtXH6N1xAIUUtl0NEBs=s0)
 
 [![](https://lh3.googleusercontent.com/ME4H7RDg8fwz9KtpDymZlyOiT41Gk14JfJSpRRcjsdc=w800)](https://lh3.googleusercontent.com/ME4H7RDg8fwz9KtpDymZlyOiT41Gk14JfJSpRRcjsdc=s0)
 
 [![](https://lh3.googleusercontent.com/n4AIj4pRKoe7YiRWAKgzIoMcXfthTrZy20KyotZRd_s=w800)](https://lh3.googleusercontent.com/n4AIj4pRKoe7YiRWAKgzIoMcXfthTrZy20KyotZRd_s=s0)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACiHDTHAgLJT_zHPaNiwL_Sa/luontokuvat/kes%C3%A4/5/DS23914-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACMvizb9OFcrfa_4pb9Pbgca/luontokuvat/kes%C3%A4/5/DS23914.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA5OtWb9obvkv3RqsLt4GQ4a/luontokuvat/kes%C3%A4/5/DS23887-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABb9-i-KDy5BsXYVxMG5Xf7a/luontokuvat/kes%C3%A4/5/DS23887.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAHm02_Uy5OqDYRFnwa1lkZa/luontokuvat/kes%C3%A4/5/DS23891-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB7VAXEhbmiavMNmXSh-ERpa/luontokuvat/kes%C3%A4/5/DS23891.jpg)
+
+
+
+
