--- a/luontokuvat/kesa/_posts/2015-07-14-00021.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00021.md
@@ -2,18 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/8Tz6bvJqzc1YVWYc1rUa49PXDEaiso4_BWU54TDWLWA=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAONZbnEqXB8IAP1UD-kCUua/luontokuvat/kes%C3%A4/5/DS24185-245px%20%282%29.jpg
   thumb:
 ---
 
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADXNjlq1yRAzWiVllRtaNiPa/luontokuvat/kes%C3%A4/5/DS24185-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADnbfwS_J757fHoY5WkdCb_a/luontokuvat/kes%C3%A4/5/DS24185.jpg)
+
 [![](https://lh3.googleusercontent.com/ABzVv4GmKJiCXbbdhlozH3UONXIn6ItDMgMniC0QZk0=w800)](https://lh3.googleusercontent.com/ABzVv4GmKJiCXbbdhlozH3UONXIn6ItDMgMniC0QZk0=s0)
-
-[![](https://lh3.googleusercontent.com/cVPV6gaTGDoY1lYrb7fspKBEexPxPq8NqMlD1jqOgVc=w800)](https://lh3.googleusercontent.com/cVPV6gaTGDoY1lYrb7fspKBEexPxPq8NqMlD1jqOgVc=s0)
-
-[![](https://lh3.googleusercontent.com/lkyWz6g6d7zqcFOUJ6UuCdnoZ8XJMdkxDDgLi_BTV0o=w800)](https://lh3.googleusercontent.com/lkyWz6g6d7zqcFOUJ6UuCdnoZ8XJMdkxDDgLi_BTV0o=s0)
 
 [![](https://lh3.googleusercontent.com/7XsfNVPljaV2Uac7mDsHjdHVtRLtXabmyFKpg8G3C0g=w800)](https://lh3.googleusercontent.com/7XsfNVPljaV2Uac7mDsHjdHVtRLtXabmyFKpg8G3C0g=s0)
 
-[![](https://lh3.googleusercontent.com/hDc_6sUb5sHxTmxrVKc1H0nAYQCO2r9ydY3pLVCuf2k=w800)](https://lh3.googleusercontent.com/hDc_6sUb5sHxTmxrVKc1H0nAYQCO2r9ydY3pLVCuf2k=s0)
-
-[![](https://lh3.googleusercontent.com/_mD80JyfdaZ9ixlzap5cph6oG9TzTYoJnfin6C9eCKA=w800)](https://lh3.googleusercontent.com/_mD80JyfdaZ9ixlzap5cph6oG9TzTYoJnfin6C9eCKA=s0)
+[![](https://lh3.googleusercontent.com/lkyWz6g6d7zqcFOUJ6UuCdnoZ8XJMdkxDDgLi_BTV0o=w800)](https://lh3.googleusercontent.com/lkyWz6g6d7zqcFOUJ6UuCdnoZ8XJMdkxDDgLi_BTV0o=s0)
