--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00093.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00093.md
@@ -2,16 +2,14 @@
 layout: page
 image:
   feature:
-  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABxcoXO7NHE6Q52XTaZvs0_a/luontokuvat/kes%C3%A4/5/DS24849-245px%20%282%29.jpg
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAEX0r7rzRKiqkk9INvZY4ma/luontokuvat/kes%C3%A4/6/DS25682-245px.jpg
   thumb:
 ---
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACNgbwbvAKKXaoAMgoz9Nw_a/luontokuvat/kes%C3%A4/5/DS24842-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAwsdka-9ngQWgmrD78ffMea/luontokuvat/kes%C3%A4/5/DS24842.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADEZldBrxRj9KV-764-kZuFa/luontokuvat/kes%C3%A4/6/DS25672-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABn3IXZ1Dkiu_XEji9klG_ha/luontokuvat/kes%C3%A4/6/DS25672.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACX8CccnRWsxwBJPyX4BvXJa/luontokuvat/kes%C3%A4/5/DS24848-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADzsiwgioF1Q4X35h3bt0_Ca/luontokuvat/kes%C3%A4/5/DS24848.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA8rrZILkfjYJxA_0KcxcSja/luontokuvat/kes%C3%A4/6/DS25680-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAArNfRCjWBhHohfww5fTPuwa/luontokuvat/kes%C3%A4/6/DS25680.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADdmEAuAnB-RLpFvQEQPcFQa/luontokuvat/kes%C3%A4/5/DS24850-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACy7AWRVYLUY9eicscuh5dua/luontokuvat/kes%C3%A4/5/DS24850.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACoYfhfCdJKFb09fmBLu_T3a/luontokuvat/kes%C3%A4/6/DS25682-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACO580zCPxNGJXQkPmBGj8va/luontokuvat/kes%C3%A4/6/DS25682.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAArrWDyVaIyemCKbSfNFy7Ra/luontokuvat/kes%C3%A4/5/DS24849-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD53pdh7ZS3tijTn-p1m10ia/luontokuvat/kes%C3%A4/5/DS24849.jpg)
-
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACy2B0yjIm3M1w77Jd84mdKa/luontokuvat/kes%C3%A4/5/DS24865-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB2_AUUI1yS8nZLuaLN8F8Aa/luontokuvat/kes%C3%A4/5/DS24865.jpg)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABK_LiPgQXhY7nPtThozmmRa/luontokuvat/kes%C3%A4/6/DS25685-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACokKu4r3J4MTI-Js6bykCca/luontokuvat/kes%C3%A4/6/DS25685.jpg)
