--- a/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00008.md
+++ b/en/pictures-of-finnish-nature/summer/_posts/2015-07-14-00008.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/uyHM36fg9AUyXFzvqOVyAuCcLs-fv7-Ch4puM8e3PU8=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADn8qchyrgfEiyvy7pIGWdWa/luontokuvat/kes%C3%A4/2/DSC10074-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/lNBsl1qweJLiIRkWDmUR0q1kq2MeNhTSDLHT2UKESME=w800)](https://lh3.googleusercontent.com/lNBsl1qweJLiIRkWDmUR0q1kq2MeNhTSDLHT2UKESME=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADHH-5P3r64felD8x1rFW-fa/luontokuvat/kes%C3%A4/2/DSC10074_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACVAKDoguJRL4imA3tUyJu-a/luontokuvat/kes%C3%A4/2/DSC10074_2.jpg)
