--- a/luontokuvat/kesa/_posts/2015-07-14-00023.md
+++ b/luontokuvat/kesa/_posts/2015-07-14-00023.md
@@ -2,8 +2,8 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/vhhso8tgWi2UocHVOYT9EnZyDM9yIEtUblB41lEgKVo=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABEbnoCJggDKKuMWV-eD4MFa/luontokuvat/kes%C3%A4/2/DSC28716-245px.jpg
   thumb:
 ---
 
-[![](https://lh3.googleusercontent.com/mrtoTfh65C5shJ3X1Gs19NQZAAMKdG1IhJ1QHAVLjXY=w800)](https://lh3.googleusercontent.com/mrtoTfh65C5shJ3X1Gs19NQZAAMKdG1IhJ1QHAVLjXY=s0)
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABwM068mJ_WEZEI5q5LG9ESa/luontokuvat/kes%C3%A4/2/DSC28716_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACKuG7bPRiOlt6UJAjnU-7Ua/luontokuvat/kes%C3%A4/2/DSC28716_2.jpg)
