--- a/en/pictures-of-miki/_posts/2015-07-13-00061.md
+++ b/en/pictures-of-miki/_posts/2015-07-13-00061.md
@@ -16,6 +16,12 @@ image:
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAA-24jS8ly-5az6Vrcr7JIa/mikin-kuvat/2/DS28192-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACjaHqeX--CdCR6bSDW0-lda/mikin-kuvat/2/DS28192.jpg)
 
+##### Trying to catch a rabbit.. Look at that tail :D
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABiM2XUANVg1PqkOKtwqBO5a/mikin-kuvat/2/DS28001-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABIQCQKZo03vUwCFcuRJlbta/mikin-kuvat/2/DS28001.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACx9K_DHZOkvnDfWNW3L1DUa/mikin-kuvat/2/DS27996-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD1-r-AhL3rYLoOWRcZ8vH9a/mikin-kuvat/2/DS27996.jpg)
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC6SiFlXk3zaif10_1zCB_-a/mikin-kuvat/2/DS27955-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADREf67e8Pu6jB5x1oNELnPa/mikin-kuvat/2/DS27955.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAbq8Kg_Gw1Oh-SyIVnNytha/mikin-kuvat/2/DS27956-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA1K6AtcAZXuUH6DoTTJ2Ipa/mikin-kuvat/2/DS27956.jpg)
