--- a/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00017.md
+++ b/en/pictures-of-finnish-nature/autumn/_posts/2015-07-14-00017.md
@@ -2,10 +2,16 @@
 layout: page
 image:
   feature:
-  teaser: https://lh3.googleusercontent.com/saDXwEmaxm_vY8SEv0B0CBpD5V-tLTH0JOFClvtRYKY=w245
+  teaser: https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABI4cw8sIqysOK8BlrihN6Pa/luontokuvat/syksy/2/DS27046-245px.jpg
   thumb:
 ---
 
 [![](https://lh3.googleusercontent.com/klo305yDJtqkkwIhKLqsKu2VIQOmCSSPQN3fK4r6Dbw=w800)](https://lh3.googleusercontent.com/klo305yDJtqkkwIhKLqsKu2VIQOmCSSPQN3fK4r6Dbw=s0)
 
 [![](https://lh3.googleusercontent.com/y_W1KilEylwK3S8ta6wbviTWl7BfzvMZCJAtkSJZ8D8=w800)](https://lh3.googleusercontent.com/y_W1KilEylwK3S8ta6wbviTWl7BfzvMZCJAtkSJZ8D8=s0)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACHm6jx4P4AXVuB47Bo9BlLa/luontokuvat/syksy/2/DS27055-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADICS1rb7if0s2ylvR55VPca/luontokuvat/syksy/2/DS27055.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABj_jZuUHR-2P0Hpa8ugouRa/luontokuvat/syksy/2/DS27054-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACDqNNykfOmOT2tF7ts8Ltsa/luontokuvat/syksy/2/DS27054.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABWG_iMJsJF2RTBpCpdiFMOa/luontokuvat/syksy/2/DS27046-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADyhfZZMphhLm84oWRnxf53a/luontokuvat/syksy/2/DS27046.jpg)
