--- a/en/activation/_posts/2015-07-20-towels.md
+++ b/en/activation/_posts/2015-07-20-towels.md
@@ -9,21 +9,11 @@ image:
 
 You may wanna use a towel, that you are about to throw away.
 
+#### Game 1:
+
 In the first time you can simply put the treats on the floor and lay a small towel on top of them and then let your dog search the treats.
 
-You can make this exercise harder by replacing the towel with bigger one. Or you can roll the towel into a tube or fold it or just scrunch it and the treat is of course inside the towel. Also you can roll the towel and then tie it to a knot or two.
-
-I usually put one to five treats each time. You should use any dry and hard treats, like pieces of dried chicken filets.
-
-I have tried some soft treats (like a wiener) for this one. But when I put soft treats, Miki doesn’t open the knots to get the treat, but instead drools the spot wet where the wiener is and then sucks it through the towel. And when you use dry treats you don’t need to wash the towel each time.
-
-It takes 10 to 15 minutes for Miki to open the double knotted towel.
-
-Sometimes I put the towel inside a cardboard box, so that Miki first needs to get it out from the box. And sometimes I put a plastic basket or a laundry basket face down on top of the towel, so Miki first needs to move the basket out of the way.
-
-I also tried twisting a bath towel with treats inside. I first rolled the towel lengthwise to a roll and then I twisted the roll so tight, that it twisted back. This is hard to explain, but look at the pictures. It took Miki about four minutes to get all the treats out.
-
----
+You can make this exercise harder by replacing the towel with bigger one. Or you can roll the towel into a tube or fold it or just scrunch it and the treat is of course inside the towel.
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAcOSXRAfdO1emM_gCxa-Fea/aktivointi/pyyheliina/DSC32624-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD_664I8Yos8Yni6WSms-VGa/aktivointi/pyyheliina/DSC32624.jpg)
 
@@ -31,9 +21,23 @@ I also tried twisting a bath towel with treats inside. I first rolled the towel 
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACsVn2jHjMDj5R7iId0t24ca/aktivointi/pyyheliina/DSC32727-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADSrGsBLu7Bwx6vJG-1KglIa/aktivointi/pyyheliina/DSC32727.jpg)
 
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB0hyuIKk4JECRQtGTeuYj2a/aktivointi/pyyheliina/DSC43068-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADo_Fkg9xV3g4YB3tv95GpVa/aktivointi/pyyheliina/DSC43068.jpg)
+
+####Game 2:
+
+You can roll the towel and then tie it to a knot or two.
+
+I usually put one to five treats each time. You should use any dry and hard treats, like pieces of dried chicken filets. I have tried some soft treats (like a wiener) for this one. But when I put soft treats, Miki doesn’t open the knots to get the treat, but instead drools the spot wet where the wiener is and then sucks it through the towel. And when you use dry treats you don’t need to wash the towel each time.
+
+It takes Miki 5 minutes to open a knotted towel and about 10 to 15 minutes a double knotted towel.
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACLmXTbuY6a0fqh788J8QExa/aktivointi/pyyheliina/DSC293991_-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAAr4nUUp0srlZ_WH382-pKa/aktivointi/pyyheliina/DSC293991_.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAANYraAXfN7NivFnMHlZew4a/aktivointi/pyyheliina/DSC29414_2-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAMdAyJrW-CTLJ4LpNj_Kaqa/aktivointi/pyyheliina/DSC29414_2.jpg)
+
+#### Game 3:
+
+Sometimes I put the towel inside a cardboard box, so that Miki first needs to get it out from the box.
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAP-VWaRoVz10K5F2BihsR7a/aktivointi/pyyheliina/DSC42941-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADqF9yNg7qjJxeG5rBlGu9Ka/aktivointi/pyyheliina/DSC42941.jpg)
 
@@ -41,14 +45,34 @@ I also tried twisting a bath towel with treats inside. I first rolled the towel 
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAn6pRuSSD-_X9yHeDwb-Sra/aktivointi/pyyheliina/DSC42973-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACZmg9JFtgMOvzutuEU_B0Ca/aktivointi/pyyheliina/DSC42973.jpg)
 
+#### Game 4:
+
+And sometimes I put a plastic basket or a laundry basket face down on top of the towel, so Miki first needs to move the basket out of the way.
+
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB509OEAYbv8ZrjaX3rIjA9a/aktivointi/pyyhelaatikko/DSC43952-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAvf9Tb3xkweGrpPlSN04fYa/aktivointi/pyyhelaatikko/DSC43952.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAC0oewrPbJH31QalXWAtFWGa/aktivointi/pyyhelaatikko/DSC43961-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADvxgfDWAbAveNhnYtKaXUUa/aktivointi/pyyhelaatikko/DSC43961.jpg)
 
-[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB0hyuIKk4JECRQtGTeuYj2a/aktivointi/pyyheliina/DSC43068-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADo_Fkg9xV3g4YB3tv95GpVa/aktivointi/pyyheliina/DSC43068.jpg)
+#### Game 5:
+
+I twisted a bath towel with treats inside. I first rolled the towel lengthwise to a roll and then I twisted the roll so tight, that it twisted back. This is hard to explain, but look at the pictures. It took Miki about four minutes to get all the treats out.
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABEgMOBjRMYVn83UAOKuTNIa/aktivointi/pyyheliina/DSC52029-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABM6sfhSdGP5uBET0W43dbPa/aktivointi/pyyheliina/DSC52029.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA-6RsJpK8MI0ThZz1mCN9Da/aktivointi/pyyheliina/DSC52033-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAD-_5RKPzsMLMpWzDsCG8b7a/aktivointi/pyyheliina/DSC52033.jpg)
 
 [![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADLZHY_xwDg2DXaIP849Rvaa/aktivointi/pyyheliina/DSC52036-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACf1hoBOwLp8m6A7oHXcuaYa/aktivointi/pyyheliina/DSC52036.jpg)
+
+#### Game 6:
+
+Hide the folded towel under a rug.
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAA80NjtoWOpNxxkA__ZVR3Na/aktivointi/pyyheliina/DS30527-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAkcoyRcX2cWpMtaiEXF2_la/aktivointi/pyyheliina/DS30527.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACbCMhn9sBNfkUgwssZ5aL-a/aktivointi/pyyheliina/DS30531-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AABu2xBOLJSX4sOfcvpCP0uFa/aktivointi/pyyheliina/DS30531.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACv1o6klfG5EnHoM6NK7en-a/aktivointi/pyyheliina/DS30539-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAl-3ZaHRoRNy9Iuw_bDq5Va/aktivointi/pyyheliina/DS30539.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AACR11VqmXlv7UuG49X1ffzTa/aktivointi/pyyheliina/DS30547-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAB4w5oQBv5FaQ7uDQg1BSj1a/aktivointi/pyyheliina/DS30547.jpg)
+
+[![](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AAAeW3OGjz7aDoz7VGUAaMT5a/aktivointi/pyyheliina/DS30509-800px.jpg)](https://dl.dropboxusercontent.com/sh/ea1wtnz7z734o12/AADssYgqhPB0kpsTdPm_JR4Qa/aktivointi/pyyheliina/DS30509.jpg)
